# katala-slm

./: ARCHITECTURE.md  Cargo.toml  README.md
benches/: inference_bench.rs
src/: lib.rs  main.rs
src/continual/: ewc.rs  knowledge_version.rs  mod.rs  update_engine.rs
src/data/: dataset.rs  jmed.rs  mod.rs  pubmed.rs  tokenizer.rs
src/eval/: medqa.rs  metrics.rs  mod.rs
src/inference/: cuda_opt.rs  engine.rs  kv_cache.rs  mod.rs  sampler.rs
src/ks/: confidence.rs  evidence.rs  mod.rs  source.rs  verify.rs
src/model/: attention.rs  config.rs  embedding.rs  mlp.rs  mod.rs  norm.rs  transformer.rs
src/model/moe/: expert.rs  layer.rs  mod.rs  router.rs
src/serve/: api.rs
src/training/: distillation.rs  dpo.rs  mod.rs  optimizer.rs  qlora.rs
tests/: data_parsers_tests.rs  inference_tests.rs  integration_tests.rs  ks_axis_tests.rs  ks_tests.rs  model_tests.rs  training_tests.rs
